@@ -35,7 +35,7 @@ ifeq ($(MODE),ssl)
 LARGS := $(LARGS) -lssl -lcrypto
 
 RT_SOAP_SEC = test_sec_soap
-RT_STD_SEC = tsgetparam ssp ssback cert ssock2 ssto
+RT_STD_SEC = tsgetparam ssp ssback cert ssock2 ssto ssockto
 
 else
 # Without SSL support
@@ -78,7 +78,7 @@ RT_STD = turl tgetparam param dummy simple tclientto shutdown strm strm2 \
 	dirop multiple tcom tmime sessions2 sessions3 huge_response sback \
 	server_info append compress zapp zbig zfile zstrm split zstrm2 once \
 	get_post zopen timer tmem file2 eres sock1 sock2 sessions4 wait \
-	stream_response smtp sto $(RT_STD_SEC)
+	stream_response smtp sto sockto $(RT_STD_SEC)
 
 STD_TESTS    = $(RT_STD)
 ALONE_TESTS  = $(RT_STD_ALONE)
