@@ -1,3 +1,8 @@
+2004-04-21  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* sockto.adb, sockto.out, ssockto.adb, ssockto.out, makefile:
+	One more plain/secure pair of the socket timeout regression tests.
+
 2004-04-19  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* ssto.adb:
